--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
 
     // --- Schedule blocks ---
        const scheduleBlocks = [
-      { time: "6:00 – 6:30 am", text: "Brush & Toilet" },
+      { time: "6:00 – 6:30 am", text: "Brush & washroom" },
       { time: "6:30 – 7:15 am", text: "Workout", habitId: "workout" },
       { time: "7:15 – 7:30 am", text: "Walk outside" },
       { time: "7:30 – 8:00 am", text: "Brain challenge", habitId: "brain" },
