--- a/index.html
+++ b/index.html
@@ -925,26 +925,39 @@
     }
 
     // --- Schedule blocks ---
-       const scheduleBlocks = [
-      { time: "6:00 – 6:30 am", text: "Brush & washroom" },
-      { time: "6:30 – 7:15 am", text: "Workout", habitId: "workout" },
-      { time: "7:15 – 7:30 am", text: "Walk outside" },
-      { time: "7:30 – 8:00 am", text: "Brain challenge", habitId: "brain" },
-      { time: "8:00 – 8:30 am", text: "Bath & Breakfast" },
-      { time: "8:30 – 9:00 am", text: "Start office" },
-      { time: "9:00 am – 7:00 pm", text: "Office" },
+      // Weekday Schedule (Mon–Fri)
+const scheduleBlocks = [
+  { time: "6:00 – 6:30 am", text: "Brush & Toilet", type: "morning", strict: true },
+  { time: "6:30 – 7:15 am", text: "Workout", habitId: "workout", type: "morning", strict: true },
+  { time: "7:15 – 7:30 am", text: "Walk outside", type: "morning", strict: false },
+  { time: "7:30 – 8:00 am", text: "Brain challenge", habitId: "brain", type: "morning", strict: true },
+  { time: "8:00 – 8:30 am", text: "Bath & Breakfast", type: "morning", strict: true },
+  { time: "8:30 – 9:00 am", text: "Start office", type: "work", strict: true },
+  { time: "9:00 am – 7:00 pm", text: "Office", type: "work", strict: true },
 
-      { time: "7:00 – 7:30 pm", text: "Skill development", habitId: "skill" },
-      { time: "7:30 – 7:55 pm", text: "Excel", habitId: "excel" },
-      { time: "7:55 – 8:05 pm", text: "Forex", habitId: "forex" },
-      { time: "8:00 – 8:30 pm", text: "NISM certification", habitId: "nism" },
-      { time: "8:30 – 9:00 pm", text: "Dinner" },
-      { time: "9:00 – 9:20 pm", text: "Read", habitId: "read" },
-      { time: "9:30 – 10:00 pm", text: "YouTube / Idea panel", habitId: "yt" },
-      { time: "10:00 – 10:20 pm", text: "Pray", habitId: "pray" },
-      { time: "10:20 – 11:00 pm", text: "Meditation / Scripting", habitId: "meditation" },
-      { time: "11:00 pm – 6:00 am", text: "Sleep" }
-    ];
+  { time: "7:00 – 7:30 pm", text: "Skill development", habitId: "skill", type: "night", strict: true },
+  { time: "7:30 – 7:55 pm", text: "Excel", habitId: "excel", type: "night", strict: false },
+  { time: "7:55 – 8:05 pm", text: "Forex", habitId: "forex", type: "night", strict: false },
+  { time: "8:00 – 8:30 pm", text: "NISM certification", habitId: "nism", type: "night", strict: false },
+  { time: "8:30 – 9:00 pm", text: "Dinner", type: "night", strict: true },
+  { time: "9:00 – 9:20 pm", text: "Read", habitId: "read", type: "night", strict: true },
+  { time: "9:30 – 10:00 pm", text: "YouTube / Idea panel", habitId: "yt", type: "night", strict: false },
+  { time: "10:00 – 10:20 pm", text: "Pray", habitId: "pray", type: "night", strict: true },
+  { time: "10:20 – 11:00 pm", text: "Meditation / Scripting", habitId: "meditation", type: "night", strict: true },
+  { time: "11:00 pm – 6:00 am", text: "Sleep", type: "night", strict: true }
+];
+
+// Weekend Schedule (Sat–Sun)
+const weekendSchedule = [
+  { time: "6:30 – 7:30 am", text: "Workout / Walk", type: "morning", strict: true },
+  { time: "7:30 – 8:30 am", text: "Brain challenge", type: "morning", strict: false },
+  { time: "8:30 – 9:30 am", text: "Bath & Breakfast", type: "morning", strict: false },
+  { time: "10:00 – 11:30 am", text: "YouTube creation", type: "work", strict: true },
+  { time: "11:30 – 1:00 pm", text: "LinkedIn post + explore opportunities", type: "work", strict: false },
+  { time: "3:00 – 5:00 pm", text: "Learn new skill / course", type: "work", strict: false },
+  { time: "7:30 – 9:30 pm", text: "Movie / Relax (quality family time)", type: "night", strict: false }
+];
+
 
 
     function renderSchedule() {
