--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
     // --- Schedule blocks ---
       // Weekday Schedule (Mon–Fri)
 const scheduleBlocks = [
-  { time: "6:00 – 6:30 am", text: "Brush & Toilet", type: "morning", strict: true },
+  { time: "6:00 – 6:30 am", text: "Brush & Washroom", type: "morning", strict: true },
   { time: "6:30 – 7:15 am", text: "Workout", habitId: "workout", type: "morning", strict: true },
   { time: "7:15 – 7:30 am", text: "Walk outside", type: "morning", strict: false },
   { time: "7:30 – 8:00 am", text: "Brain challenge", habitId: "brain", type: "morning", strict: true },
@@ -961,24 +961,62 @@ const weekendSchedule = [
 
 
     function renderSchedule() {
-      scheduleListEl.innerHTML = "";
-      scheduleBlocks.forEach(block => {
-        const row = document.createElement("div");
-        row.className = "schedule-row";
+  const isWeekend =
+    currentDate.getDay() === 0 || currentDate.getDay() === 6; // Sun=0, Sat=6
 
-        const left = document.createElement("div");
-        left.className = "schedule-time";
-        left.textContent = block.time;
+  const list = isWeekend ? weekendSchedule : scheduleBlocks;
+  scheduleListEl.innerHTML = "";
 
-        const right = document.createElement("div");
-        right.className = "schedule-task";
+  list.forEach(block => {
+    const row = document.createElement("div");
+    row.className = "schedule-row";
 
-        if (block.habitId) {
-          const habit = habits.find(h => h.id === block.habitId);
-          right.textContent = habit ? habit.name : block.text;
-        } else {
-          right.textContent = block.text;
-        }
+    // Color coding
+    if (block.type === "morning") row.style.borderLeft = "4px solid #38bdf8";
+    if (block.type === "work") row.style.borderLeft = "4px solid #fbbf24";
+    if (block.type === "night") row.style.borderLeft = "4px solid #a78bfa";
+
+    const left = document.createElement("div");
+    left.className = "schedule-time";
+    left.textContent = block.time;
+
+    const right = document.createElement("div");
+    right.className = "schedule-task";
+
+    if (block.habitId) {
+      const habit = habits.find(h => h.id === block.habitId);
+      right.textContent = habit ? habit.name : block.text;
+    } else {
+      right.textContent = block.text;
+    }
+
+    // Non-negotiable vs optional
+    const tag = document.createElement("span");
+    tag.style.fontSize = "0.65rem";
+    tag.style.padding = "2px 6px";
+    tag.style.borderRadius = "8px";
+    tag.style.marginLeft = "6px";
+
+    if (block.strict) {
+      tag.textContent = "non-negotiable";
+      tag.style.background = "rgba(34,197,94,0.15)";
+      tag.style.color = "#4ade80";
+      tag.style.border = "1px solid rgba(34,197,94,0.5)";
+    } else {
+      tag.textContent = "optional";
+      tag.style.background = "rgba(148,163,184,0.15)";
+      tag.style.color = "#9ca3af";
+      tag.style.border = "1px solid rgba(148,163,184,0.4)";
+    }
+
+    right.appendChild(tag);
+
+    row.appendChild(left);
+    row.appendChild(right);
+    scheduleListEl.appendChild(row);
+  });
+}
+
 
         row.appendChild(left);
         row.appendChild(right);
