--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
           </div>
         </div>
       </div>
+      <!-- HABIT TRACKER -->
+      <div class="card home-habits">
+        <h2 class="card-title">Habit tracker (today)</h2>
+        <div id="habitList" class="habit-list">
+          <!-- Filled by JavaScript -->
+        </div>
+        <div class="task-hint">
+          Tick off habits as you complete them. They are saved per day automatically.
+        </div>
+      </div>
 
       <!-- HISTORY -->
       <div class="card home-history">
