--- a/index.html
+++ b/index.html
@@ -47,11 +47,24 @@
 
       </div>
 
+           <!-- HABIT TRACKER -->
+      <div class="card home-habits">
+        <h2 class="card-title">Habit tracker (today)</h2>
+        <div id="habitList" class="habit-list">
+          <!-- Filled by JavaScript -->
+        </div>
+        <div class="task-hint">
+          Tick off habits as you complete them. They are saved per day automatically.
+        </div>
+      </div>
+
       <!-- SCHEDULE -->
       <div class="card home-schedule">
         <h2 class="card-title">Daily Schedule</h2>
         <div class="schedule-list" id="scheduleDisplay"></div>
-        <div class="schedule-note">The highlighted block shows what you should be doing right now.</div>
+        <div class="schedule-note">
+          The highlighted block shows what you should be doing right now.
+        </div>
       </div>
 
       <!-- PROGRESS -->
@@ -80,24 +93,13 @@
           </div>
         </div>
       </div>
-      
-           <!-- HABIT TRACKER -->
-      <div class="card home-habits">
-        <h2 class="card-title">Habit tracker (today)</h2>
-        <div id="habitList" class="habit-list">
-          <!-- Filled by JavaScript -->
-        </div>
-        <div class="task-hint">
-          Tick off habits as you complete them. They are saved per day automatically.
-        </div>
-      </div>
-
 
       <!-- HISTORY -->
       <div class="card home-history">
         <h2 class="card-title">Recent Log</h2>
         <div class="history-list" id="homeHistoryList"></div>
       </div>
+
 
     </section>
     <!-- PERSONAL PAGE -->
